formulario para formgroup y estilos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-formcontrol-exercise></app-formcontrol-exercise>
+<div class="nav-bar">
+  <h1>Taller de angular form</h1>
+</div>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
