--- a/src/app/components/formcontrol-exercise/formcontrol-exercise.component.html
+++ b/src/app/components/formcontrol-exercise/formcontrol-exercise.component.html
@@ -1,1 +1,6 @@
-<p>formcontrol-exercise works!</p>
+<h1>Datos personales</h1>
+
+<div class="form-element">
+    <label for="name">Nombre: </label>
+    <input id="name" type="text">
+</div>
