--- a/src/app/components/formcontrol-exercise/formcontrol-exercise.component.html
+++ b/src/app/components/formcontrol-exercise/formcontrol-exercise.component.html
@@ -2,5 +2,16 @@
 
 <div class="form-element">
     <label for="name">Nombre: </label>
-    <input id="name" type="text">
+    <input id="name" type="text" [formControl]="name" autocomplete="off">
+    <ng-container *ngIf="name && name.invalid && (name.dirty || name.touched)">
+        <div class="error" *ngIf="name.hasError('required')">Valor requerido</div>
+    </ng-container>
+</div>
+
+
+<div>
+    formulario Valido: {{name.valid}}
+</div>
+<div>
+    nombre: {{name.value}}
 </div>
